--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.87) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Tue, 08 May 2018 22:41:00 -0700
+
 lintian (2.5.86) unstable; urgency=medium
 
   * Summary of tag changes:
