--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,11 @@ lintian (2.5.87) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * data/rules/rules-should-not-use:
+    + [CL] Add a pedantic-level warning about possibly complete automatic
+      debug symbol migrations.  Thanks to Graham Inggs for the report.
+      (Closes: #897608)
+
  -- Chris Lamb <lamby@debian.org>  Tue, 08 May 2018 22:41:00 -0700
 
 lintian (2.5.86) unstable; urgency=medium
