--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ lintian (2.5.87) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * checks/files.pm:
+    + [BR] Redetect privacy breach in IE comment.
   * data/rules/rules-should-not-use:
     + [CL] Add a pedantic-level warning about possibly complete automatic
       debug symbol migrations.  Thanks to Graham Inggs for the report.
