--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,9 @@ lintian (2.5.87) UNRELEASED; urgency=medium
     + [CL] Warn about packages that install files under /usr/include with
       overly-generic filenames.  Thanks to Andreas Beckmann for the report.
       (Closes: #898377)
+  * checks/upstream-metadata.desc:
+    + [CL] Correct a "non-file directory entry" grammatical error in the
+      description of the upstream-metadata-is-not-a-file tag.
 
   * data/rules/rules-should-not-use:
     + [CL] Add a pedantic-level warning about possibly complete automatic
