Warn about packages using debian/pyversions. (Closes: #898592)
Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ lintian (2.5.87) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * checks/cruft.{desc,pm}:
+    + [CL] Apply patch from Joseph Herlant to warn about use of obsolete
+      debian/pyversion files.  Thanks!  (Closes: #898592)
   * checks/fields.{desc,pm}:
     + [BR] Detect privacy breaches in Internet Explorer "<!--[if IE 8]>"
       conditional comments.
