--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,8 @@ lintian (2.5.87) UNRELEASED; urgency=medium
     + [CL] Warn about packages that install files under /usr/include with
       overly-generic filenames.  Thanks to Andreas Beckmann for the report.
       (Closes: #898377)
+  * checks/files.pm:
+    + [BR] Add umd suffix for minified javascript.
   * checks/upstream-metadata.desc:
     + [CL] Correct a "non-file directory entry" grammatical error in the
       description of the upstream-metadata-is-not-a-file tag.
