--- a/debian/changelog
+++ b/debian/changelog
@@ -14,13 +14,14 @@ lintian (2.5.87) UNRELEASED; urgency=medium
       overly-generic filenames.  Thanks to Andreas Beckmann for the report.
       (Closes: #898377)
   * checks/files.pm:
-    + [BR] Add umd suffix for minified javascript.
+    + [BR] Add "umd" as a possible suffix for minified Javascript.
+      (alongside "lite", "min", "pack", etc.)
   * checks/upstream-metadata.desc:
     + [CL] Correct a "non-file directory entry" grammatical error in the
       description of the upstream-metadata-is-not-a-file tag.
 
   * data/files/privacy-breaker-websites:
-    + [BR] Detect libjs-rx uses.
+    + [BR] Detect uses of the "libjs-rx" API for asynchronous programming.
   * data/rules/rules-should-not-use:
     + [CL] Add a pedantic-level warning about possibly complete automatic
       debug symbol migrations.  Thanks to Graham Inggs for the report.
