--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,8 @@ lintian (2.5.87) UNRELEASED; urgency=medium
     + [CL] Correct a "non-file directory entry" grammatical error in the
       description of the upstream-metadata-is-not-a-file tag.
 
+  * data/files/js-libraries:
+    + [BR] Detect uses of the libjs-normalize.css reset css helper.
   * data/files/privacy-breaker-websites:
     + [BR] Detect uses of the "libjs-rx" API for asynchronous programming.
   * data/rules/rules-should-not-use:
