--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
-lintian (2.5.87) UNRELEASED; urgency=medium
+lintian (2.5.87) unstable; urgency=medium
 
-  XXX: generate tag summary
+  * Summary of tag changes:
+    + Added:
+      - debian-pyversions-is-obsolete
+      - debug-symbol-migration-possibly-complete
+      - header-has-overly-generic-name
 
   * checks/cruft.{desc,pm}:
     + [CL] Apply patch from Joseph Herlant to warn about use of obsolete
@@ -37,13 +41,15 @@ lintian (2.5.87) UNRELEASED; urgency=medium
     + [CL] Add a pedantic-level warning about possibly complete automatic
       debug symbol migrations.  Thanks to Graham Inggs for the report.
       (Closes: #897608)
+  * data/spelling/corrections:
+    + [PW] Add a number of corrections.
 
   * lib/Lintian/Collect/Package.pm:
     + [CL] Support parsing tar(1) archives with high-resolution timestamps
       (eg. "21:47:29.12396808").  Based on a patch by Stephen Kitt; thanks!
       (Closes: #898715)
 
- -- Chris Lamb <lamby@debian.org>  Tue, 08 May 2018 22:41:00 -0700
+ -- Chris Lamb <lamby@debian.org>  Sat, 19 May 2018 19:30:19 +0000
 
 lintian (2.5.86) unstable; urgency=medium
 
