Update references to pkg-perl's homepages since the Salsa migration.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ lintian (2.5.88) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * checks/application-not-library.desc:
+    + [CL] Update references to pkg-perl's homepages since the Salsa
+      migration.
   * checks/elpa.desc:
     + [CL] Apply patch from Sean Whitton to update references to
       emacsen-team's website since the move from Alioth to Salsa.
