--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,10 @@ lintian (2.5.88) UNRELEASED; urgency=medium
     + [CL] Apply patch from Sean Whitton to update references to
       emacsen-team's website since the move from Alioth to Salsa.
       Thank!  (Closes: #899214)
+  * checks/fields.pm:
+    + [CL] Really don't warn about binary packages "depending" on toolchain
+      packages via Conflicts/Breaks relations.  Thanks to Guillem Jover.
+      (Closes: #896133)
   * checks/files.pm:
     + [CL] Only warn about (eg.) "/usr/include/util.h" and
       "/usr/include/<multiarch-dir>/util.h" when checking for overly
