Add search.cpan.org to obsolete-sites
It is being replaced by metacpan.org.

See-also: https://log.perl.org/2018/05/goodbye-search-dot-cpan-dot-org.html

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ lintian (2.5.89) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * data/obsolete-sites/obsolete-sites:
+    + [PW] Add search.cpan.org
+
  -- Chris Lamb <lamby@debian.org>  Tue, 22 May 2018 11:25:09 +0200
 
 lintian (2.5.88) unstable; urgency=medium
