--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ lintian (2.5.89) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * checks/files.pm:
+    + [BR] Detect privacy breach in html5 files.
+
   * data/obsolete-sites/obsolete-sites:
     + [PW] Add search.cpan.org
 
