--- a/debian/changelog
+++ b/debian/changelog
@@ -3,7 +3,8 @@ lintian (2.5.89) UNRELEASED; urgency=medium
   XXX: generate tag summary
 
   * checks/cruft.pm:
-    + [BR] Detect minified javascript in html files.
+    + [BR] Detects minified javascript in html files.
+    + [BR] Detects browserified javascript.
   * checks/files.pm:
     + [BR] Detect privacy breach in html5 files.
 
