--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,10 @@ lintian (2.5.89) UNRELEASED; urgency=medium
   * checks/cruft.pm:
     + [BR] Detect minified Javascript in HTML files.
     + [BR] Detect browserified Javascript.
+  * checks/debhelper.pm:
+    + [CL] Specifically check for missing "auto" in (for example)
+      "override_dh_build".  Thanks to Mattia Rizzolo for the idea.
+      (Closes: #900213)
   * checks/files.pm:
     + [BR] Detect privacy breaches in HTML5 files.
   * checks/group-checks.pm:
