--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,9 @@ lintian (2.5.89) UNRELEASED; urgency=medium
     + [CL] Prevent false-positives when checking debug-package-for-multi-
       arch-same-pkg-not-coinstallable by ignoring Python "debug" packages.
       (Closes: #900122)
+  * checks/source-copyright.pm:
+    + [CL] Update references from <https://dep.debian.net> to
+      <https://dep-team.pages.debian.net>.
 
   * data/obsolete-sites/obsolete-sites:
     + [PW] Add search.cpan.org to the list of obsolete sites; it has been
