--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
-lintian (2.5.89) UNRELEASED; urgency=medium
+lintian (2.5.89) unstable; urgency=medium
 
-  XXX: generate tag summary
+  * Summary of tag changes:
+    + Added:
+      - embedded-script-includes-copyright-statement
+      - source-contains-browserified-javascript
 
   * checks/cruft.pm:
     + [BR] Detect minified Javascript in HTML files.
@@ -23,12 +26,14 @@ lintian (2.5.89) UNRELEASED; urgency=medium
   * data/obsolete-sites/obsolete-sites:
     + [PW] Add search.cpan.org to the list of obsolete sites; it has been
       replaced by metacpan.org.
+  * data/spelling/corrections:
+    + [PW] Add a number of corrections.
 
   * vendors/pureos/main/data/fields/derivative-fields:
     + [CL] Update the Vcs-* checks for PureOS now that code has moved to a
       GitLab instance.
 
- -- Chris Lamb <lamby@debian.org>  Tue, 22 May 2018 11:25:09 +0200
+ -- Chris Lamb <lamby@debian.org>  Fri, 01 Jun 2018 10:22:09 +0000
 
 lintian (2.5.88) unstable; urgency=medium
 
