--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.90) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Fri, 01 Jun 2018 14:59:51 +0100
+
 lintian (2.5.89) unstable; urgency=medium
 
   * Summary of tag changes:
