Detect installing fonts outside /usr/share/fonts

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,11 +2,12 @@ lintian (2.5.92) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
-  * checks/files.desc:
+  * checks/files.{desc,pm}:
     + [BR] Detect ESLint config files installed in the tree. ESLint is
       pluggable linting utility for JavaScript. This kind of files belong
       to source not to installed package.
     + [BR] Detect .woff, .woff2 and .eot files as fonts.
+    + [BR] Detect installed fonts outside /usr/share/fonts.
 
  -- Chris Lamb <lamby@debian.org>  Sat, 16 Jun 2018 20:30:43 +0200
 
