--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,9 @@ lintian (2.5.92) UNRELEASED; urgency=medium
       to source not to installed package.
     + [BR] Detect .woff, .woff2 and .eot files as fonts.
     + [BR] Detect installed fonts outside /usr/share/fonts.
+    + [BR] Detect .npmignore files installed in the tree. These files
+      help npm the Node.js package manager to keep files
+      out of npm package.
 
  -- Chris Lamb <lamby@debian.org>  Sat, 16 Jun 2018 20:30:43 +0200
 
