--- a/debian/changelog
+++ b/debian/changelog
@@ -16,9 +16,9 @@ lintian (2.5.90) UNRELEASED; urgency=medium
     + [BR] Detect ESLint config file installed in the tree. ESLint is
       pluggable linting utility for JavaScript. This kind of files belong
       to source not to installed package.
-    + [BR] Detects woff, eot file as fonts.
-    + [BR] Detects installing fonts outside /usr/share/fonts
-    + [BR] Detects .npmignore file installed in the tree. .npmignore files
+    + [BR] Detect woff, eot file as fonts.
+    + [BR] Detect installing fonts outside /usr/share/fonts
+    + [BR] Detect .npmignore file installed in the tree. .npmignore files
       help npm the node package manager to keep files out of npm package.
   * checks/systemd.pm:
     + [CL] Don't use potentially-undefined value in invalid .service files.
