Open new changelog entry for 2.5.91.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.91) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Wed, 13 Jun 2018 21:35:31 +0200
+
 lintian (2.5.90) unstable; urgency=medium
 
 
