--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,11 @@ lintian (2.5.91) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * checks/rules.{pm,desc}, data/*:
+    + [CL] Also permit "python2" and suffixed variants as substitutes for
+      "python" (etc.) to avoid false-positives in the
+      missing-dep-for-interpreter, missing-build-dependency-for-dh-addon
+      and missing-python-build-dependency tags.  (Closes: #901075)
   * checks/files.{desc,pm}:
     + [CL] Warn if debhelper is in Build-Depends-{Arch,Indep} but not
       Build-Depends.  (Closes: #901507)
