--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,4 @@
-lintian (2.5.91) UNRELEASED; urgency=medium
-
-  XXX: generate tag summary
+lintian (2.5.91) unstable; urgency=medium
 
   * checks/rules.desc:
     + [CL] Replace DH_BUILD_MAINT_OPTIONS with DEB_BUILD_MAINT_OPTIONS
@@ -12,7 +10,10 @@ lintian (2.5.91) UNRELEASED; urgency=medium
       missing-dep-for-interpreter, missing-build-dependency-for-dh-addon
       and missing-python-build-dependency tags.  (Closes: #901075)
 
- -- Chris Lamb <lamby@debian.org>  Wed, 13 Jun 2018 21:35:31 +0200
+  * data/spelling/corrections:
+    + [PW] Add a number of corrections.
+
+ -- Chris Lamb <lamby@debian.org>  Sat, 16 Jun 2018 17:59:35 +0000
 
 lintian (2.5.90) unstable; urgency=medium
 
