--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.92) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Sat, 16 Jun 2018 20:30:43 +0200
+
 lintian (2.5.91) unstable; urgency=medium
 
   * checks/rules.desc:
