--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,12 @@ lintian (2.5.92) UNRELEASED; urgency=medium
     + [BR] Detect documentation files outside /usr/share/doc.
       (Closes: #901274)
 
+  * data/spelling/corrections:
+    + [CL] Drop non-hyphenated versions of "re-enable" and "re-enabled";
+      these are seemingly legitimate.  See
+      <https://github.com/systemd/systemd/pull/9321> for the background and
+      further discussion.
+
  -- Chris Lamb <lamby@debian.org>  Sat, 16 Jun 2018 20:30:43 +0200
 
 lintian (2.5.91) unstable; urgency=medium
