--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,8 @@ lintian (2.5.92) UNRELEASED; urgency=medium
       these are seemingly legitimate.  See
       <https://github.com/systemd/systemd/pull/9321> for the background and
       further discussion.
+  * data/standards-version/release-dates:
+    + [CL] Add 4.1.5 as a known Standards-Version.
 
  -- Chris Lamb <lamby@debian.org>  Sat, 16 Jun 2018 20:30:43 +0200
 
