--- a/debian/changelog
+++ b/debian/changelog
@@ -29,6 +29,9 @@ lintian (2.5.92) UNRELEASED; urgency=medium
   * data/standards-version/release-dates:
     + [CL] Add 4.1.5 as a known Standards-Version.
 
+  * t/scripts/spellintian.t:
+    + [CL] Bump test count.
+
  -- Chris Lamb <lamby@debian.org>  Sat, 16 Jun 2018 20:30:43 +0200
 
 lintian (2.5.91) unstable; urgency=medium
