--- a/debian/changelog
+++ b/debian/changelog
@@ -30,6 +30,8 @@ lintian (2.5.92) UNRELEASED; urgency=medium
     + [CL] Add 4.1.5 as a known Standards-Version.
 
   * t/scripts/spellintian.t:
+    + [PW] Differentiate between no-op corrections and case sensitive
+      corrections 
     + [CL] Bump test count.
 
  -- Chris Lamb <lamby@debian.org>  Sat, 16 Jun 2018 20:30:43 +0200
