--- a/debian/changelog
+++ b/debian/changelog
@@ -33,7 +33,7 @@ lintian (2.5.92) UNRELEASED; urgency=medium
 
   * t/scripts/spellintian.t:
     + [PW] Differentiate between no-op corrections and case sensitive
-      corrections 
+      corrections.
     + [CL] Bump test count.
 
  -- Chris Lamb <lamby@debian.org>  Sat, 16 Jun 2018 20:30:43 +0200
