--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.93) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Wed, 04 Jul 2018 21:04:44 +0200
+
 lintian (2.5.92) unstable; urgency=medium
 
   The "Policy 4.1.5" release.
