--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,10 @@ lintian (2.5.94) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * data/scripts/interpreters:
+    + [CL] Add the Julia language as a known interpreter via
+      #!/usr/bin/julia.  (Closes: #904140)
+
  -- Chris Lamb <lamby@debian.org>  Mon, 16 Jul 2018 11:00:58 +0100
 
 lintian (2.5.93) unstable; urgency=medium
