--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,10 @@ lintian (2.5.94) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * checks/scripts.pm:
+    + [CL] Policy 10.4 states that Perl scripts must use /usr/bin/perl
+      directly and not via /usr/bin/env, etc.  (Closes: #904414)
+
   * data/scripts/interpreters:
     + [CL] Add the Julia language as a known interpreter via
       #!/usr/bin/julia.  (Closes: #904140)
