--- a/t/tests/scripts-interpreters/debian/debian/install
+++ b/t/tests/scripts-interpreters/debian/debian/install
@@ -7,6 +7,8 @@ python2.7               usr/bin/
 syntax                  usr/bin/
 unusual                 usr/bin/
 unversioned-pike        usr/bin/
+usr-bin-env-perl	usr/bin/
 usr-local               usr/bin/
+usr-local-bin-perl	usr/bin/
 versioned-pike          usr/bin/
 wrong-perl-path         usr/bin/
