--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,10 @@ lintian (2.5.94) UNRELEASED; urgency=medium
 
   XXX: generate tag summary
 
+  * checks/control-file.desc:
+    + [CL] Raise the severity of the debian-control-has-empty-field tag
+      from "P:" to "I:" and explicitly test the "whitespace" cases.
+      (Closes: #904420)
   * checks/scripts.pm:
     + [CL] Policy 10.4 states that Perl scripts must use /usr/bin/perl
       directly and not via /usr/bin/env, etc.  (Closes: #904414)
