--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ lintian (2.5.94) UNRELEASED; urgency=medium
     + [CL] Raise the severity of the debian-control-has-empty-field tag
       from "P:" to "I:" and explicitly test the "whitespace" cases.
       (Closes: #904420)
+    + [CL] Warn about mispellings of Rules-Requires-Root.  Thanks to Axel
+      Beckert for the idea.  (Closes: #904522)
   * checks/scripts.pm:
     + [CL] Policy 10.4 states that Perl scripts must use /usr/bin/perl
       directly and not via /usr/bin/env, etc.  (Closes: #904414)
