--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+lintian (2.5.95) UNRELEASED; urgency=medium
+
+  XXX: generate tag summary
+
+ -- Chris Lamb <lamby@debian.org>  Wed, 25 Jul 2018 20:34:15 +0800
+
 lintian (2.5.94) unstable; urgency=medium
 
   * Summary of tag changes:
